Use LocalStack for Step Functions, use quarkus.stepfunctions as prefix to align with LocalStack

--- a/integration-tests/pom.xml
+++ b/integration-tests/pom.xml
@@ -78,6 +78,10 @@
         </dependency>
         <dependency>
             <groupId>io.quarkiverse.amazonservices</groupId>
+            <artifactId>quarkus-amazon-sfn</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>io.quarkiverse.amazonservices</groupId>
             <artifactId>quarkus-amazon-cognito-user-pools</artifactId>
         </dependency>
         <dependency>
