--- a/sfn/deployment/src/test/resources/sync-urlconn-full-config.properties
+++ b/sfn/deployment/src/test/resources/sync-urlconn-full-config.properties
@@ -1,10 +1,10 @@
-quarkus.sfn.endpoint-override=http://localhost:9090
+quarkus.stepfunctions.endpoint-override=http://localhost:9090
 
-quarkus.sfn.aws.region=us-east-1
-quarkus.sfn.aws.credentials.type=static
-quarkus.sfn.aws.credentials.static-provider.access-key-id=test-key
-quarkus.sfn.aws.credentials.static-provider.secret-access-key=test-secret
+quarkus.stepfunctions.aws.region=us-east-1
+quarkus.stepfunctions.aws.credentials.type=static
+quarkus.stepfunctions.aws.credentials.static-provider.access-key-id=test-key
+quarkus.stepfunctions.aws.credentials.static-provider.secret-access-key=test-secret
 
-quarkus.sfn.sync-client.type = url
-quarkus.sfn.sync-client.connection-timeout = 0.100S
-quarkus.sfn.sync-client.socket-timeout = 0.100S
+quarkus.stepfunctions.sync-client.type = url
+quarkus.stepfunctions.sync-client.connection-timeout = 0.100S
+quarkus.stepfunctions.sync-client.socket-timeout = 0.100S
