Added integration test

--- a/integration-tests/src/main/resources/application.properties
+++ b/integration-tests/src/main/resources/application.properties
@@ -24,6 +24,7 @@ quarkus.sns.sync-client.type=${sync-client.type}
 quarkus.sqs.sync-client.type=${sync-client.type}
 quarkus.ssm.sync-client.type=${sync-client.type}
 quarkus.sts.sync-client.type=${sync-client.type}
+quarkus.stepfunctions.sync-client.type=${sync-client.type}
 quarkus.cognito-user-pools.async-client.type=${async-client.type}
 quarkus.dynamodb.async-client.type=${async-client.type}
 quarkus.iam.async-client.type=${async-client.type}
@@ -36,6 +37,5 @@ quarkus.sns.async-client.type=${async-client.type}
 quarkus.sqs.async-client.type=${async-client.type}
 quarkus.ssm.async-client.type=${async-client.type}
 quarkus.sts.async-client.type=${async-client.type}
-
-
+quarkus.stepfunctions.async-client.type=${async-client.type}
 quarkus.s3.telemetry.enabled=true
