feat: add support for SFN (Step Functions) client (#1058)
* Init add support for Amazon SFN (Step Functions)

* Updated description

* Initial version of SFN docs

* Use LocalStack for Step Functions, use quarkus.stepfunctions as prefix to align with LocalStack

* Use quarkus.stepfunctions as prefix to align with LocalStack

* Re-generated docs

* Updated docs

* Added integration test

* Updated docs

* Updated docs

* Minor textual change in docs

* Reorder module

* Use 'quarkus.sfn.' properties for SFN configuration.

* Updated docs with .sfn properties.

* Introduced helper method to get property configuration name based on LocalStack Enabled Service for dev services setup.

* Re-order

---------

Co-authored-by: Bas Hovestad <bas.hovestad@abnamroverzekeringen.nl>

--- a/devservices/pom.xml
+++ b/devservices/pom.xml
@@ -24,6 +24,7 @@
         <module>s3</module>
         <module>secretsmanager</module>
         <module>ses</module>
+        <module>sfn</module>
         <module>sns</module>
         <module>sqs</module>
         <module>ssm</module>
