--- a/integration-tests/src/main/resources/application.properties
+++ b/integration-tests/src/main/resources/application.properties
@@ -2,7 +2,6 @@ quarkus.http.test-timeout=1m
 
 quarkus.aws.devservices.localstack.image-name=localstack/localstack:3.0.1
 quarkus.aws.devservices.localstack.container-properties."START_WEB"=0
-quarkus.aws.devservices.localstack.additional-services.kinesis.enabled=true
 quarkus.aws.devservices.localstack.additional-services.redshift.enabled=true
 quarkus.aws.devservices.moto.image-name=motoserver/moto:3.0.2
 
@@ -15,9 +14,10 @@ quarkus.dynamodbenhanced.client-extensions=software.amazon.awssdk.enhanced.dynam
 quarkus.cognito-user-pools.sync-client.type=${sync-client.type}
 quarkus.dynamodb.sync-client.type=${sync-client.type}
 quarkus.iam.sync-client.type=${sync-client.type}
+quarkus.kinesis.sync-client.type=${sync-client.type}
 quarkus.kms.sync-client.type=${sync-client.type}
-quarkus.s3.sync-client.type=${sync-client.type}
 quarkus.lambda.sync-client.type=${sync-client.type}
+quarkus.s3.sync-client.type=${sync-client.type}
 quarkus.secretsmanager.sync-client.type=${sync-client.type}
 quarkus.ses.sync-client.type=${sync-client.type}
 quarkus.sns.sync-client.type=${sync-client.type}
@@ -28,14 +28,16 @@ quarkus.sfn.sync-client.type=${sync-client.type}
 quarkus.cognito-user-pools.async-client.type=${async-client.type}
 quarkus.dynamodb.async-client.type=${async-client.type}
 quarkus.iam.async-client.type=${async-client.type}
+quarkus.kinesis.async-client.type=${async-client.type}
 quarkus.kms.async-client.type=${async-client.type}
-quarkus.s3.async-client.type=${async-client.type}
 quarkus.lambda.async-client.type=${async-client.type}
+quarkus.s3.async-client.type=${async-client.type}
 quarkus.secretsmanager.async-client.type=${async-client.type}
 quarkus.ses.async-client.type=${async-client.type}
+quarkus.sfn.async-client.type=${async-client.type}
 quarkus.sns.async-client.type=${async-client.type}
 quarkus.sqs.async-client.type=${async-client.type}
 quarkus.ssm.async-client.type=${async-client.type}
 quarkus.sts.async-client.type=${async-client.type}
-quarkus.sfn.async-client.type=${async-client.type}
+
 quarkus.s3.telemetry.enabled=true
