--- a/pom.xml
+++ b/pom.xml
@@ -21,16 +21,17 @@
     <module>dynamodb</module>
     <module>dynamodb-enhanced</module>
     <module>iam</module>
+    <module>kinesis</module>
+    <module>kms</module>
+    <module>lambda</module>
     <module>s3</module>
+    <module>secretsmanager</module>
+    <module>ses</module>
     <module>sfn</module>
     <module>sns</module>
     <module>sqs</module>
-    <module>ses</module>
-    <module>kms</module>
     <module>ssm</module>
     <module>sts</module>
-    <module>secretsmanager</module>
-    <module>lambda</module>
     <module>docs</module>
     <module>integration-tests</module>
   </modules>
