--- a/docs/pom.xml
+++ b/docs/pom.xml
@@ -126,10 +126,13 @@
                                     <includes>
                                         <include>quarkus-aws-devservices-localstack-local-stack-dev-services-build-time-config.adoc</include>
                                         <include>quarkus-aws-devservices-moto-moto-dev-services-build-time-config.adoc</include>
+                                        <include>quarkus-amazon-cognitouserpools.adoc</include>
                                         <include>quarkus-amazon-dynamodb.adoc</include>
                                         <include>quarkus-amazon-dynamodb-enhanced.adoc</include>
                                         <include>quarkus-amazon-iam.adoc</include>
                                         <include>quarkus-amazon-kms.adoc</include>
+                                        <include>quarkus-amazon-kinesis.adoc</include>
+                                        <include>quarkus-amazon-lambda.adoc</include>
                                         <include>quarkus-amazon-s3.adoc</include>
                                         <include>quarkus-amazon-secretsmanager.adoc</include>
                                         <include>quarkus-amazon-ses.adoc</include>
@@ -138,8 +141,6 @@
                                         <include>quarkus-amazon-sqs.adoc</include>
                                         <include>quarkus-amazon-ssm.adoc</include>
                                         <include>quarkus-amazon-sts.adoc</include>
-                                        <include>quarkus-amazon-cognitouserpools.adoc</include>
-                                        <include>quarkus-amazon-lambda.adoc</include>
                                     </includes>
                                     <filtering>false</filtering>
                                 </resource>
