--- a/integration-tests/src/main/resources/application.properties
+++ b/integration-tests/src/main/resources/application.properties
@@ -13,6 +13,7 @@ quarkus.dynamodbenhanced.client-extensions=software.amazon.awssdk.enhanced.dynam
 
 quarkus.cognito-user-pools.sync-client.type=${sync-client.type}
 quarkus.dynamodb.sync-client.type=${sync-client.type}
+quarkus.eventbridge.sync-client.type=${sync-client.type}
 quarkus.iam.sync-client.type=${sync-client.type}
 quarkus.kinesis.sync-client.type=${sync-client.type}
 quarkus.kms.sync-client.type=${sync-client.type}
@@ -27,6 +28,7 @@ quarkus.sts.sync-client.type=${sync-client.type}
 quarkus.sfn.sync-client.type=${sync-client.type}
 quarkus.cognito-user-pools.async-client.type=${async-client.type}
 quarkus.dynamodb.async-client.type=${async-client.type}
+quarkus.eventbridge.async-client.type=${async-client.type}
 quarkus.iam.async-client.type=${async-client.type}
 quarkus.kinesis.async-client.type=${async-client.type}
 quarkus.kms.async-client.type=${async-client.type}
