--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,7 @@
     <module>cognito-user-pools</module>
     <module>dynamodb</module>
     <module>dynamodb-enhanced</module>
+    <module>eventbridge</module>
     <module>iam</module>
     <module>kinesis</module>
     <module>kms</module>
