--- a/s3/deployment/pom.xml
+++ b/s3/deployment/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>io.quarkiverse.amazonservices</groupId>
         <artifactId>quarkus-amazon-s3-parent</artifactId>
-        <version>999-SNAPSHOT</version>
+        <version>2.9.0</version>
     </parent>
 
     <artifactId>quarkus-amazon-s3-deployment</artifactId>
