--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
   </parent>
   <groupId>io.quarkiverse.amazonservices</groupId>
   <artifactId>quarkus-amazon-services-parent</artifactId>
-  <version>999-SNAPSHOT</version>
+  <version>2.11.0</version>
   <packaging>pom</packaging>
   <name>Quarkus - Amazon Services - Parent</name>
   <modules>
