--- a/eventbridge/deployment/pom.xml
+++ b/eventbridge/deployment/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>io.quarkiverse.amazonservices</groupId>
         <artifactId>quarkus-amazon-eventbridge-parent</artifactId>
-        <version>2.11.0</version>
+        <version>999-SNAPSHOT</version>
     </parent>
 
     <artifactId>quarkus-amazon-eventbridge-deployment</artifactId>
