feat: CloudWatch SDK (#1151)
* feat: CloudWatch SDK

* Update amazon-cloudwatch.adoc

Amend docs description

* Update pom.xml

Co-authored-by: Sébastien Crocquesel <88554524+scrocquesel@users.noreply.github.com>

* Update bom/pom.xml

Co-authored-by: Sébastien Crocquesel <88554524+scrocquesel@users.noreply.github.com>

* Update bom/pom.xml

Co-authored-by: Sébastien Crocquesel <88554524+scrocquesel@users.noreply.github.com>

* Update pom.xml

* Add quarkus-amazon-cloudwatch.adoc

* Fix documentation

* Added some tests

* Move the tests to the Integration module

---------

Co-authored-by: Sébastien Crocquesel <88554524+scrocquesel@users.noreply.github.com>

--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,7 @@
     <module>crt</module>
     <module>common</module>
     <module>devservices</module>
+    <module>cloudwatch</module>
     <module>cognito-user-pools</module>
     <module>dynamodb</module>
     <module>dynamodb-enhanced</module>
