--- a/cloudwatchlogs/runtime/src/main/resources/META-INF/quarkus-extension.yaml
+++ b/cloudwatchlogs/runtime/src/main/resources/META-INF/quarkus-extension.yaml
@@ -1,6 +1,6 @@
 ---
 artifact: ${project.groupId}:${project.artifactId}:${project.version}
-name: "Amazon CloudWatch"
+name: "Amazon CloudWatch Logs"
 metadata:
   keywords:
     - "cloudwatch"
@@ -8,7 +8,7 @@ metadata:
     - "amazon"
   categories:
     - "data"
-  guide: https://docs.quarkiverse.io/quarkus-amazon-services/dev/amazon-cloudwatch-logs-logs.html
+  guide: https://docs.quarkiverse.io/quarkus-amazon-services/dev/amazon-cloudwatchlogs.html
   status: "preview"
   config:
   - "quarkus.cloudwatch."
