Add missing configuration for cloudwatchlogs

--- a/integration-tests/src/main/resources/application.properties
+++ b/integration-tests/src/main/resources/application.properties
@@ -12,6 +12,7 @@ quarkus.s3.interceptors=io.quarkus.it.amazon.s3.S3ModifyResponse
 quarkus.dynamodbenhanced.client-extensions=software.amazon.awssdk.enhanced.dynamodb.extensions.VersionedRecordExtension,io.quarkus.it.amazon.dynamodb.enhanced.MyExtension
 
 quarkus.cloudwatch.sync-client.type=${sync-client.type}
+quarkus.cloudwatchlogs.sync-client.type=${sync-client.type}
 quarkus.cognito-user-pools.sync-client.type=${sync-client.type}
 quarkus.dynamodb.sync-client.type=${sync-client.type}
 quarkus.eventbridge.sync-client.type=${sync-client.type}
@@ -28,6 +29,7 @@ quarkus.ssm.sync-client.type=${sync-client.type}
 quarkus.sts.sync-client.type=${sync-client.type}
 quarkus.sfn.sync-client.type=${sync-client.type}
 quarkus.cloudwatch.async-client.type=${async-client.type}
+quarkus.cloudwatchlogs.async-client.type=${async-client.type}
 quarkus.cognito-user-pools.async-client.type=${async-client.type}
 quarkus.dynamodb.async-client.type=${async-client.type}
 quarkus.eventbridge.async-client.type=${async-client.type}
