feat: CloudWatch Logs SDK (#1154)
* feat: CloudWatch Logs SDK

* Fixing docs

* Added CloudWatchLogsSyncClientTest

* Review tests

* `cloudwatch-logs` to `cloudwatchlogs`

* Rename docs

* Add missing configuration for cloudwatchlogs

* Apply suggestions from code review

---------

Co-authored-by: Sébastien Crocquesel <88554524+scrocquesel@users.noreply.github.com>

--- a/bom/pom.xml
+++ b/bom/pom.xml
@@ -237,6 +237,23 @@
                 <artifactId>quarkus-amazon-secretsmanager-deployment</artifactId>
                 <version>${project.version}</version>
             </dependency>
+
+            <dependency>
+                <groupId>io.quarkiverse.amazonservices</groupId>
+                <artifactId>quarkus-amazon-devservices-cloudwatchlogs</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>io.quarkiverse.amazonservices</groupId>
+                <artifactId>quarkus-amazon-cloudwatchlogs</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>io.quarkiverse.amazonservices</groupId>
+                <artifactId>quarkus-amazon-cloudwatchlogs-deployment</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+
             <dependency>
                 <groupId>io.quarkiverse.amazonservices</groupId>
                 <artifactId>quarkus-amazon-devservices-cloudwatch</artifactId>
