--- a/docs/pom.xml
+++ b/docs/pom.xml
@@ -127,6 +127,7 @@
                                         <include>quarkus-aws-devservices-localstack-local-stack-dev-services-build-time-config.adoc</include>
                                         <include>quarkus-aws-devservices-moto-moto-dev-services-build-time-config.adoc</include>
                                         <include>quarkus-amazon-cloudwatch.adoc</include>
+                                        <include>quarkus-amazon-cloudwatchlogs.adoc</include>
                                         <include>quarkus-amazon-cognitouserpools.adoc</include>
                                         <include>quarkus-amazon-dynamodb.adoc</include>
                                         <include>quarkus-amazon-dynamodb-enhanced.adoc</include>
