--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,7 @@
     <module>common</module>
     <module>devservices</module>
     <module>cloudwatch</module>
+    <module>cloudwatchlogs</module>
     <module>cognito-user-pools</module>
     <module>dynamodb</module>
     <module>dynamodb-enhanced</module>
