--- a/devservices/pom.xml
+++ b/devservices/pom.xml
@@ -19,6 +19,7 @@
     <modules>
         <module>cognito-user-pools</module>
         <module>cloudwatch</module>
+        <module>cloudwatchlogs</module>
         <module>dynamodb</module>
         <module>eventbridge</module>
         <module>iam</module>
