--- a/sts/runtime/pom.xml
+++ b/sts/runtime/pom.xml
@@ -77,7 +77,7 @@
         
         <dependency>
             <groupId>org.graalvm.sdk</groupId>
-            <artifactId>graal-sdk</artifactId>
+            <artifactId>nativeimage</artifactId>
         </dependency>
     </dependencies>
 
