--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,7 @@
     <module>dynamodb-enhanced</module>
     <module>eventbridge</module>
     <module>iam</module>
+    <module>inspector</module>
     <module>kinesis</module>
     <module>kms</module>
     <module>lambda</module>
