feat: produce trace-enabled Sqs client when telemetry is enabled

--- a/docs/pom.xml
+++ b/docs/pom.xml
@@ -126,6 +126,7 @@
                                     <includes>
                                         <include>quarkus-aws-devservices-localstack-local-stack-dev-services-build-time-config.adoc</include>
                                         <include>quarkus-aws-devservices-moto-moto-dev-services-build-time-config.adoc</include>
+                                        <include>quarkus-otel-instrumentation-aws-sdk-telemetry-config.adoc</include>
                                         <include>quarkus-amazon-cloudwatch.adoc</include>
                                         <include>quarkus-amazon-cloudwatchlogs.adoc</include>
                                         <include>quarkus-amazon-cognitouserpools.adoc</include>
