--- a/sqs/runtime/pom.xml
+++ b/sqs/runtime/pom.xml
@@ -74,6 +74,11 @@
             <groupId>org.jboss.logging</groupId>
             <artifactId>commons-logging-jboss-logging</artifactId>
         </dependency>
+        <dependency>
+            <groupId>io.opentelemetry.instrumentation</groupId>
+            <artifactId>opentelemetry-aws-sdk-2.2</artifactId>
+            <optional>true</optional>
+        </dependency>
     </dependencies>
 
     <build>
