--- a/crt/runtime/pom.xml
+++ b/crt/runtime/pom.xml
@@ -8,6 +8,7 @@
   </parent>
   <artifactId>quarkus-amazon-crt</artifactId>
   <name>Quarkus - Amazon Services - CRT - Runtime</name>
+  <description>Native support for AWS CRT</description>
   <dependencies>
     <dependency>
       <groupId>io.quarkus</groupId>
