--- a/devservices/pom.xml
+++ b/devservices/pom.xml
@@ -21,6 +21,7 @@
         <module>cloudwatch</module>
         <module>cloudwatchlogs</module>
         <module>dynamodb</module>
+        <module>ecr</module>
         <module>eventbridge</module>
         <module>iam</module>
         <module>kinesis</module>
