--- a/docs/pom.xml
+++ b/docs/pom.xml
@@ -132,6 +132,7 @@
                                         <include>quarkus-amazon-cognitouserpools.adoc</include>
                                         <include>quarkus-amazon-dynamodb.adoc</include>
                                         <include>quarkus-amazon-dynamodb-enhanced.adoc</include>
+                                        <include>quarkus-amazon-ecr.adoc</include>
                                         <include>quarkus-amazon-eventbridge.adoc</include>
                                         <include>quarkus-amazon-iam.adoc</include>
                                         <include>quarkus-amazon-kms.adoc</include>
