--- a/ecr/deployment/pom.xml
+++ b/ecr/deployment/pom.xml
@@ -27,7 +27,10 @@
         <dependency>
             <groupId>io.quarkiverse.amazonservices</groupId>
             <artifactId>quarkus-amazon-ecr</artifactId>
-            <version>${version}</version>
+        </dependency>
+        <dependency>
+            <groupId>io.quarkiverse.amazonservices</groupId>
+            <artifactId>quarkus-amazon-devservices-ecr</artifactId>
         </dependency>
 
         <!-- Test dependencies -->
