--- a/sqs-messaging-connector/runtime/pom.xml
+++ b/sqs-messaging-connector/runtime/pom.xml
@@ -4,12 +4,12 @@
 
     <parent>
         <groupId>io.quarkiverse.amazonservices</groupId>
-        <artifactId>quarkus-amazon-sqs-messaging-connector-parent</artifactId>
+        <artifactId>quarkus-messaging-amazon-sqs-parent</artifactId>
         <version>999-SNAPSHOT</version>
     </parent>
 
-    <artifactId>quarkus-amazon-sqs-messaging-connector</artifactId>
-    <name>Quarkus - Amazon Services - SQS Messaging Connector - Runtime</name>
+    <artifactId>quarkus-messaging-amazon-sqs</artifactId>
+    <name>Quarkus - Amazon Services - SQS Messaging - Runtime</name>
     <description>Connect to Amazon SQS messaging queue service</description>
 
     <dependencies>
