--- a/sqs-messaging-connector/runtime/src/main/resources/META-INF/quarkus-extension.yaml
+++ b/sqs-messaging-connector/runtime/src/main/resources/META-INF/quarkus-extension.yaml
@@ -1,6 +1,6 @@
 ---
 artifact: ${project.groupId}:${project.artifactId}:${project.version}
-name: "Amazon SQS - Messaging Connector"
+name: "Quarkus Messaging - Amazon SQS"
 metadata:
   keywords:
     - "sqs"
