Sqs messaging connector extension

--- a/pom.xml
+++ b/pom.xml
@@ -37,6 +37,7 @@
     <module>sfn</module>
     <module>sns</module>
     <module>sqs</module>
+    <module>sqs-messaging-connector</module>
     <module>ssm</module>
     <module>sts</module>
     <module>integration-tests</module>
