rename module and force netty client type in test

--- a/pom.xml
+++ b/pom.xml
@@ -37,7 +37,7 @@
     <module>sfn</module>
     <module>sns</module>
     <module>sqs</module>
-    <module>sqs-messaging-connector</module>
+    <module>quarkus-messaging-amazon-sqs</module>
     <module>ssm</module>
     <module>sts</module>
     <module>integration-tests</module>
