--- a/quarkus-messaging-amazon-sqs/deployment/pom.xml
+++ b/quarkus-messaging-amazon-sqs/deployment/pom.xml
@@ -9,7 +9,7 @@
     </parent>
 
     <artifactId>quarkus-messaging-amazon-sqs-deployment</artifactId>
-    <name>Quarkus - Amazon Services - SQS Messaging - Deployment</name>
+    <name>Quarkus Messaging - Amazon Services - SQS - Deployment</name>
 
     <dependencies>
         <dependency>
@@ -25,20 +25,8 @@
             <artifactId>quarkus-messaging-deployment</artifactId>
         </dependency>
         <dependency>
-            <groupId>io.quarkus</groupId>
-            <artifactId>quarkus-netty-deployment</artifactId>
-        </dependency>
-        <dependency>
             <groupId>io.quarkiverse.amazonservices</groupId>
             <artifactId>quarkus-amazon-common-deployment</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>io.quarkiverse.amazonservices</groupId>
-            <artifactId>quarkus-amazon-netty-client-internal-deployment</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>io.quarkiverse.amazonservices</groupId>
-            <artifactId>quarkus-amazon-devservices-sqs</artifactId>
         </dependency>
 
         <!-- Test dependencies -->
@@ -57,6 +45,13 @@
             <artifactId>quarkus-rest-jackson</artifactId>
             <scope>test</scope>
         </dependency>
+        <!-- Imported manually because conditional dependencies
+         are not automatically added to test scope -->
+        <dependency>
+            <groupId>io.quarkiverse.amazonservices</groupId>
+            <artifactId>quarkus-amazon-netty-client-internal-deployment</artifactId> 
+            <scope>test</scope>
+        </dependency>
         <dependency>
             <groupId>software.amazon.awssdk</groupId>
             <artifactId>netty-nio-client</artifactId>
@@ -65,6 +60,11 @@
         <dependency>
             <groupId>software.amazon.awssdk</groupId>
             <artifactId>aws-crt-client</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>software.amazon.awssdk</groupId>
+            <artifactId>url-connection-client</artifactId>
             <scope>test</scope>
         </dependency>
     </dependencies>
