rename extension and artifact

--- a/quarkus-messaging-amazon-sqs/deployment/pom.xml
+++ b/quarkus-messaging-amazon-sqs/deployment/pom.xml
@@ -9,7 +9,7 @@
     </parent>
 
     <artifactId>quarkus-messaging-amazon-sqs-deployment</artifactId>
-    <name>Quarkus Messaging - Amazon Services - SQS - Deployment</name>
+    <name>Quarkus - Messaging - Amazon Services - SQS - Deployment</name>
 
     <dependencies>
         <dependency>
