--- a/quarkus-messaging-amazon-sqs/runtime/src/main/resources/META-INF/quarkus-extension.yaml
+++ b/quarkus-messaging-amazon-sqs/runtime/src/main/resources/META-INF/quarkus-extension.yaml
@@ -1,6 +1,6 @@
 ---
 artifact: ${project.groupId}:${project.artifactId}:${project.version}
-name: "Quarkus Messaging - Amazon SQS"
+name: "Messaging - Amazon SQS Connector"
 metadata:
   keywords:
     - "sqs"
