sqs messaging connector extension (#1438)
* Sqs messaging connector extension

* Rename sqs connector to Quarkus Messaging Amazon SQS

* rename module and force netty client type in test

* rename extension and artifact

---------

Co-authored-by: Ozan Gunalp <ozangunalp@gmail.com>

--- a/bom/pom.xml
+++ b/bom/pom.xml
@@ -351,6 +351,16 @@
             </dependency>
             <dependency>
                 <groupId>io.quarkiverse.amazonservices</groupId>
+                <artifactId>quarkus-messaging-amazon-sqs</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>io.quarkiverse.amazonservices</groupId>
+                <artifactId>quarkus-messaging-amazon-sqs-deployment</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>io.quarkiverse.amazonservices</groupId>
                 <artifactId>quarkus-amazon-devservices-ssm</artifactId>
                 <version>${project.version}</version>
             </dependency>
