--- a/pom.xml
+++ b/pom.xml
@@ -70,6 +70,11 @@
         </plugin>
         <plugin>
           <groupId>io.quarkus</groupId>
+          <artifactId>quarkus-config-doc-maven-plugin</artifactId>
+          <version>${quarkus.version}</version>
+        </plugin>
+        <plugin>
+          <groupId>io.quarkus</groupId>
           <artifactId>quarkus-extension-maven-plugin</artifactId>
           <version>${quarkus.version}</version>
           <executions>
