feat: add api gateway management api extension

--- a/bom/pom.xml
+++ b/bom/pom.xml
@@ -99,6 +99,16 @@
             </dependency>
             <dependency>
                 <groupId>io.quarkiverse.amazonservices</groupId>
+                <artifactId>quarkus-amazon-apigatewaymanagementapi</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>io.quarkiverse.amazonservices</groupId>
+                <artifactId>quarkus-amazon-apigatewaymanagementapi-deployment</artifactId>
+                <version>${project.version}</version>
+            </dependency>            
+            <dependency>
+                <groupId>io.quarkiverse.amazonservices</groupId>
                 <artifactId>quarkus-amazon-devservices-dynamodb</artifactId>
                 <version>${project.version}</version>
             </dependency>
