add new extension for ACM

--- a/devservices/pom.xml
+++ b/devservices/pom.xml
@@ -17,6 +17,7 @@
     </description>
     <packaging>pom</packaging>
     <modules>
+        <module>acm</module>
         <module>cognito-user-pools</module>
         <module>cloudwatch</module>
         <module>cloudwatchlogs</module>
