--- a/integration-tests/pom.xml
+++ b/integration-tests/pom.xml
@@ -30,6 +30,10 @@
         </dependency>
         <dependency>
             <groupId>io.quarkiverse.amazonservices</groupId>
+            <artifactId>quarkus-amazon-acm</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>io.quarkiverse.amazonservices</groupId>
             <artifactId>quarkus-amazon-cloudwatch</artifactId>
         </dependency>
         <dependency>
