--- a/integration-tests/src/main/resources/application.properties
+++ b/integration-tests/src/main/resources/application.properties
@@ -10,6 +10,7 @@ quarkus.dynamodb.interceptors=io.quarkus.it.amazon.dynamodb.DynamoDBModifyRespon
 quarkus.s3.interceptors=io.quarkus.it.amazon.s3.S3ModifyResponse
 quarkus.dynamodbenhanced.client-extensions=software.amazon.awssdk.enhanced.dynamodb.extensions.VersionedRecordExtension,io.quarkus.it.amazon.dynamodb.enhanced.MyExtension
 
+quarkus.acm.sync-client.type=${sync-client.type}
 quarkus.cloudwatch.sync-client.type=${sync-client.type}
 quarkus.cloudwatchlogs.sync-client.type=${sync-client.type}
 quarkus.cognito-user-pools.sync-client.type=${sync-client.type}
@@ -27,6 +28,7 @@ quarkus.sqs.sync-client.type=${sync-client.type}
 quarkus.ssm.sync-client.type=${sync-client.type}
 quarkus.sts.sync-client.type=${sync-client.type}
 quarkus.sfn.sync-client.type=${sync-client.type}
+quarkus.acm.async-client.type=${async-client.type}
 quarkus.cloudwatch.async-client.type=${async-client.type}
 quarkus.cloudwatchlogs.async-client.type=${async-client.type}
 quarkus.cognito-user-pools.async-client.type=${async-client.type}
