--- a/integration-tests/src/main/resources/application.properties
+++ b/integration-tests/src/main/resources/application.properties
@@ -52,3 +52,6 @@ quarkus.s3.telemetry.enabled=true
 quarkus.iam.custom.aws.credentials.type=static
 quarkus.iam.custom.aws.credentials.static-provider.access-key-id=112233445566
 quarkus.iam.custom.aws.credentials.static-provider.secret-access-key=test
+
+quarkus.sqs.devservices.queues=quarkus-messaging-test-queue
+mp.messaging.incoming.messages.queue=quarkus-messaging-test-queue
